--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.13",
     "expo": "~53.0.17",
     "expo-av": "~15.1.7",
+    "expo-clipboard": "^7.1.5",
     "expo-haptics": "~14.1.4",
     "expo-secure-store": "^14.2.3",
     "expo-sharing": "^13.1.5",
@@ -28,6 +29,7 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
