--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bad-words": "^4.0.0",
     "bcrypt": "^6.0.0",
+    "bip39": "^3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
